# octolog

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: mod.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs
src/core/: error.rs  mod.rs  port_spec.rs  types.rs
src/processing/: log_processor.rs  mod.rs
src/runtime/: engine.rs  mod.rs  shutdown.rs
src/sinks/: file.rs  mod.rs  stdout.rs
src/sources/serial/: mod.rs  port.rs  scan.rs
